--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <main>
-        <div class="question-title">
-            Who won the most championships?
+        <div class="question-title" id="question-title">
+            Welcome to F1 quizz
         </div>
-        <div class="answers-container">
+        <div class="answers-container hide" id="answers-container">
             <button class="answer-btn">schumaher</button>
             <button class="answer-btn">vettel</button>
             <button class="answer-btn">hamilton</button>
             <button class="answer-btn">verstappen</button>
         </div>
         <div class="buttons-container">
-            <button class="start-btn btn">start</button>
-            <button class="next-btn btn hide">next</button>
-            <button class="finish-btn btn hide">finish</button>
-            <button class="refresh-btn btn hide">refresh</button>
+            <button class="btn" id="start">start</button>
+            <button class="btn hide" id="next">next</button>
+            <button class="btn hide" id="finish">finish</button>
+            <button class="btn hide" id="refresh">refresh</button>
         </div>
     </main>
     
